[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-memory-runtime"
version = "0.1.0"
description = "Autonomous memory runtime for agent systems"
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "alembic>=1.13.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
    "psycopg[binary]>=3.2.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.hatch.build.targets.wheel]
packages = ["app"]
